代码阅读初始化版本